--- a/index_f.html
+++ b/index_f.html
@@ -316,8 +316,8 @@
 
 								<div class="col-4 col-6-medium col-12-small">
 									<article class="box style2">
-										<a href="#" class="image featured"><img src="images/microCT_radiomics.jpg" alt="" /></a>
-										<h3><a href="#">Multimodal CT Imaging and Analysis for identification of scale-invariant Radiomic features
+										<a href="/files/Clot_Radiomics_MS_Draft.pdf" class="image featured"><img src="images/microCT_radiomics.jpg" alt="" /></a>
+										<h3><a href="/files/Clot_Radiomics_MS_Draft.pdf">Multimodal CT Imaging and Analysis for identification of scale-invariant Radiomic features
 
 										</a></h3>
 										<p> 
