--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 								
 								<div class="col-4 col-6-medium col-12-small">
 									<article class="box style2">
-										<a href="/index_e.html" class="image featured"><img src="images/image_predict.jpg" alt="" /></a>
-										<h3><a href="/index_e.html">Outcome prediction of Stroke treatment: Statistics, feature Selection, 
+										<a href="/files/vessel_abstract.pdf" class="image featured"><img src="images/image_predict.jpg" alt="" /></a>
+										<h3><a href="/files/vessel_abstract.pdf">Outcome prediction of Stroke treatment: Statistics, feature Selection, 
 											GMM, ML predictions
 										</a></h3>
 										<p> Statistical analysis and geometric morphometrics were used to 
@@ -103,8 +103,8 @@
 
 								<div class="col-4 col-6-medium col-12-small">
 									<article class="box style2">
-										<a href="/index_e.html" class="image featured"><img src="images/population.jpg" alt="" /></a>
-										<h3><a href="/index_e.html">Predicting ICU length of stay: ML predictions, statistical analysis,
+										<a href="/files/hospital.pdf" class="image featured"><img src="images/population.jpg" alt="" /></a>
+										<h3><a href="/files/hospital.pdf">Predicting ICU length of stay: ML predictions, statistical analysis,
 											feature importance and reduction
 										</a></h3>
 										<p> ~30,000 patient data were analyzed. Initial predictors 
@@ -140,8 +140,8 @@
 
 								<div class="col-4 col-6-medium col-12-small">
 									<article class="box style2">
-										<a href="/index_e.html" class="image featured"><img src="images/catheter.gif" alt="" /></a>
-										<h3><a href="/index_e.html">3D virtual wire guided and wireless
+										<a href="/files/catheter.pdf" class="image featured"><img src="images/catheter.gif" alt="" /></a>
+										<h3><a href="/files/catheter.pdf">3D virtual wire guided and wireless
 											catheter deployment in modeled real patients
 
 										</a></h3>
@@ -178,8 +178,8 @@
 
 								<div class="col-4 col-6-medium col-12-small">
 									<article class="box style2">
-										<a href="/index_e.html" class="image featured"><img src="images/stent_ps_1.gif" alt="" /></a>
-										<h3><a href="/index_e.html">3D virtual simulation stent retriever thrombectomy in modeled real stroke patients
+										<a href="/files/stent_ps.pdf" class="image featured"><img src="images/stent_ps_1.gif" alt="" /></a>
+										<h3><a href="/files/stent_ps.pdf">3D virtual simulation stent retriever thrombectomy in modeled real stroke patients
 
 										</a></h3>
 										<p> 3D simulations of mechanical thrombectomy in modeled patient specific vasculature
@@ -212,8 +212,8 @@
 								
 								<div class="col-4 col-6-medium col-12-small">
 									<article class="box style2">
-										<a href="/index_e.html" class="image featured"><img src="images/surv.jpg" alt="" /></a>
-										<h3><a href="/index_e.html">Risk of death afte Stroke treatment: Survival analysis based on
+										<a href="/files/risk_survival.pdf" class="image featured"><img src="images/surv.jpg" alt="" /></a>
+										<h3><a href="/files/risk_survival.pdf">Risk of death afte Stroke treatment: Survival analysis based on
 											race and TPA administration
 										</a></h3>
 										<p>We completed a survival analysis methods to evaluate risk of mortality 
