--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 						<section class="box style1">
 							<span class="image fit"><img src="images/ut.jpg" alt="Profile Picture" /></span>
 							<h3>M.S.C.</h3>
-							<b>School of Mechanical Engineering and Computer Science</b>
+							<b>Mechanical Engineering, Applied Mathematics</b>
 							<p>Algorithm developement, Applied Mathematics, Programming, 
 								Computation and Numerical Methods,
 								Time Series Analysis,
@@ -476,7 +476,7 @@
 						<section class="box style1">
 							<span class="image fit"><img src="images/gu.jpg" alt="Profile Picture" /></span>
 							<h3>B.S.</h3>
-							<b>Department of Mechanical Engineering, Control and Vibration</b>
+							<b>Department of Mechanical Engineering, Applied Mechanics</b>
 							<p>Learned different programming languages, commercial softwares, and principles of Applied Mathematics
 								and Mechanical Engineering. Familiarity with Bioengineering
 							</p>						
