--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<header>
 								<h1>SeyyedMostafa M. JanbehSarayi </h1>
 
-								<h2> (You can call me Fardad!) </h2>
+								<h2> (Fardad) </h2>
 							</header>
 							<p>I have proven experience in data science, healthcare science, biomechanics, and mechanical engineering. 
 								Skilled in machine learning, statistical analysis,
