--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 								
 								<div class="col-4 col-6-medium col-12-small">
 									<article class="box style2">
-										<a href="/files/vessel_abstract.pdf" class="image featured"><img src="images/image_predict.jpg" alt="" /></a>
-										<h3><a href="/files/vessel_abstract.pdf">Outcome prediction of Stroke treatment: Statistics, feature Selection, 
+										<a href="https://www.ahajournals.org/doi/full/10.1161/SVIN.122.000646" class="image featured"><img src="images/image_predict.jpg" alt="" /></a>
+										<h3><a href="https://www.ahajournals.org/doi/full/10.1161/SVIN.122.000646">Outcome prediction of Stroke treatment: Statistics, feature Selection, 
 											GMM, ML predictions
 										</a></h3>
 										<p> Statistical analysis and geometric morphometrics were used to 
