--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								Skilled in machine learning, statistical analysis,
 								medical image processing and analysis, design and analysis, computer modeling and numerical simulation, 
 								and optimization. 
-								I am interested in healthcare data science, computational science, mechanics of medical devices' design and analysis, 
+								I am interested in data science, data analytics, egonomics product, healtcare, mechanics of devices' design and analysis, 
 								simulation of 
 								treatment procedures, and bioinformatics.
 							</p>
