--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 						<p>Email me: <p>
 
 							<a href="mailto:smmouj@gmail.com">smmouj@gmail.com</a>
-							<p> <a href="mailto:smousavi@buffalo.com">smousavi@buffalo.com</a>
+							<p> <a href="mailto:smmousavi@mdanderson.org">smmousavi@mdanderson.org</a>
 
 								<p>Call me: <p>
 
@@ -555,7 +555,7 @@
 								<li><a href="https://www.linkedin.com/in/seyyedmostafa-m-janbehsarayi-502b2966/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://scholar.google.com/citations?user=Ij7VDiEAAAAJ&hl=en" class="icon brands fa-google"><span class="label">Google</span></a></li>
 								<li><a href="https://github.com/smmjs" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://twitter.com/fardadmousavi" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/fardadmousavii" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/f.mousavi" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/fardadms/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 
