--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
 
 								<h2> (Fardad) </h2>
 							</header>
-							<p>I have proven experience in data science, healthcare science, biomechanics, and mechanical engineering. 
-								Skilled in machine learning, statistical analysis,
-								medical image processing and analysis, design and analysis, computer modeling and numerical simulation, 
-								and optimization. 
-								I am interested in data science, data analytics, egonomics product, healtcare, mechanics of devices' design and analysis, 
-								simulation of 
-								treatment procedures, and bioinformatics.
+							<p>
+								I am a Senior Statistical Analyst at MD Anderson Cancer Center. 
+I have proven experience in data science, healthcare science, biomechanics, and mechanical engineering. Skilled in machine learning, statistical analysis, medical image processing and analysis, design and analysis, computer modeling and numerical simulation, and optimization. I am interested in data science, data analytics, ergonomics product, healthcare, mechanics of devices' design and analysis, simulation of treatment procedures, and bioinformatics.
+In my role as a Statistical Analyst, I am responsible for data preparation, statistical analysis, developing machine learning/deep learning and risk predictive models for cancer incidence and mortality, generating microsimulation models, and analyzing the efficacy of cancer treatments and patient care. My tasks involve working on different types of cancer related data including but not limited to national surveys, health claim data, cancer registry data, clinical trials, medical imaging data, and observational studies (case-control and cohort studies).
+I was a consultant to Medtronic Co. where I was leading the technical aspects of a project to develop models that improved the efficacy of one of Medtronic’s newly developed endovascular intervention devices. Main achievement: was completing a pipeline based on numerical simulation and data analysis that optimized the efficacy of the devices.
+In Medical Image Analysis research topics, I have analyzed different image modalities such as digital images, CTA, nCCT, MRI, and Time-of-Flight MRA. I developed algorithms for automatic segmentation, registration, feature engineering and extraction, feature reduction, geometric morphometric, generalized Procrustes analysis, statistical shape analysis, univariate statistical analysis, and multivariate ML models (CNN, DL, SVM, LR, XGB, RFC, ANN, …).
+I also have experience in analyzing different types of patient population data including but not limited to multi-institutional and nationwide hospital records and insurance claims, clinical trials, and observational studies. I have completed data cleaning, transformation, NLP, statistics, feature reduction & selection, and ML models to help decision makers and subsequently patients in a data-driven fashion.
+
 							</p>
 							
 							<!--a href="#work" class="button large scrolly">Learn about what I do</a-->
