--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<h2> (Fardad) </h2>
 							</header>
 							<p>
-								I am a Senior Statistical Analyst at MD Anderson Cancer Center. 
+								I am a Senior Statistical Analyst at MD Anderson Cancer Center. </n>
 
 								I have proven experience in data science, healthcare science, biomechanics, and mechanical engineering. Skilled in machine learning, statistical analysis, medical image processing and analysis, design and analysis, computer modeling and numerical simulation, and optimization. I am interested in data science, data analytics, ergonomics product, healthcare, mechanics of devices' design and analysis, simulation of treatment procedures, and bioinformatics.
 
