--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="Profile Picture" /></span>
+							<span class="image fit"><img src="images/profile_pic.jpeg" alt="Profile Picture" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
