--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 					
 						<div class="col-12">
 							<hr />
-							<h2>Or find me on ...</h2>
+							<h2>Or find me on: </h2>
 							<ul class="social">
 
 								<li><a href="https://www.linkedin.com/in/seyyedmostafa-m-janbehsarayi-502b2966/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
