--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 							</header>
 							<p>
 								
-								I am a Senior Statistical Analyst at MD Anderson Cancer Center. <br>
+								I am a DAta Scientist at MD Anderson Cancer Center. <br>
 
 								<br>
 
-								With a background in Applied Mathematics (as a lecturer), Health Sciences, Bioengineering, and Mechanical Engineering, I have a passion to develop and deploy data driven solutions for real world problems. I am skilled in machine learning, statistical analysis, medical image processing and analysis, design and analysis, computer modeling and numerical simulation, and optimization. I am interested in data science, data analytics, ergonomics product, healthcare, mechanics of devices' design and analysis, simulation of treatment procedures, and bioinformatics. <br>
+								With a background in Statistics, Data science, Applied Mathematics (as a lecturer), Health Sciences, Bioengineering, and Mechanical Engineering, I have a passion to develop and deploy data driven solutions for real world problems. I am skilled in machine learning, statistical analysis, medical image processing and analysis, design and analysis, computer modeling and numerical simulation, and optimization. I am interested in data science, data analytics, ergonomics product, healthcare, mechanics of devices' design and analysis, simulation of treatment procedures, and bioinformatics. <br>
 
 								<br>
-								In my role as a Statistical Analyst, I am responsible for data preparation, statistical analysis, developing machine learning/deep learning and risk predictive models for cancer incidence and mortality, generating microsimulation models, and analyzing the efficacy of cancer treatments and patient care. My tasks involve working on different types of cancer related data including but not limited to national surveys, health claim data, cancer registry data, clinical trials, medical imaging data, and observational studies (case-control and cohort studies). <br>
+								In my roles at MD Anderson, I am responsible for data preparation, statistical analysis, developing machine learning/deep learning and risk predictive models for cancer incidence and mortality, generating microsimulation models, and analyzing the efficacy of cancer treatments and patient care. My tasks involve working on different types of cancer related data including but not limited to national surveys, health claim data, cancer registry data, clinical trials, medical imaging data, and observational studies (case-control and cohort studies). <br>
 
 								<br>
 								I was a consultant to Medtronic Co. where I was leading the technical aspects of a project to develop models that improved the efficacy of one of Medtronic’s newly developed endovascular intervention devices. Main achievement: was completing a pipeline based on numerical simulation and data analysis that optimized the efficacy of the devices. <br>
