--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							</header>
 							<p>
 								
-								I am a DAta Scientist at MD Anderson Cancer Center. <br>
+								Currently, I am a Data Scientist at MD Anderson Cancer Center, previously a Senior Statistical Analyst. <br>
 
 								<br>
 
