--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
 							<span class="image fit"><img src="images/profile_pic.jpeg" alt="Profile Picture" /></span>
+							<br> Data Scientist
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
