--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 						<div class="col-4 col-5-large col-12-medium">
 							<span class="image fit"><img src="images/profile_pic.jpeg" alt="Profile Picture" /></span>
 							<br> Data Scientist
+							<br> MD Anderson Cancer Center
+							<br> Born September 1988
+							
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
