--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 							<span class="image fit"><img src="images/profile_pic.jpeg" alt="Profile Picture" /></span>
 							<br> Data Scientist
 							<br> MD Anderson Cancer Center
-							<br> Born September 1988
+							<br> Ph.D. SUNY at Buffalo
+							<br> Born September, 1988
 							
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
