--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>SeyyedMostafa M. JanbehSarayi </h1>
+								<h1>S. Mostafa Mousavi JanbehSarayi </h1>
 
 								<h2> (Fardad) </h2>
 							</header>
