--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								<div class="col-4 col-6-medium col-12-small">
 									<article class="box style2">
 										<a href="https://arxiv.org/abs/2207.00903" class="image featured"><img src="images/ann.jpg" alt="" /></a>
-										<h3><a href="https://arxiv.org/abs/2207.00903">A Structured Sparse Neural Network and Its Matrix Calculations Algorithm</a></h3>
+										<h3><a href="https://arxiv.org/abs/2207.00903">A Structured and Sparse Neural Network and Its Matrix Calculations Algorithm</a></h3>
 										<p>A new sparse and structured Neural Network is presented.
 											We introduce a nonsymmetric, tridiagonal matrix with offdiagonal,
 											 offset sub, and super-diagonals entries, besides new algorithms for its 
