--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 						<h2>Contact:</h2>
 						<p>Email me: <p>
 
-							<a href="mailto:smmouj@gmail.com">smmouj@gmail.com</a>
+							<a href="mailto:smmoujs@gmail.com">smmoujs@gmail.com</a>
 							<p> <a href="mailto:smmousavi@mdanderson.org">smmousavi@mdanderson.org</a>
 
 								<p>Call me: <p>
