--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							</header>
 							<p>
 								
-								Currently, I am a Data Scientist at MD Anderson Cancer Center, previously a Senior Statistical Analyst. <br>
+								Currently, I am a Data Scientist at MD Anderson Cancer Center, formerly a Senior Statistical Analyst. <br>
 
 								<br>
 
