--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								
 
 
-								I am a Data Scientist at MD Anderson Cancer Center, formerly a Senior Statistical Analyst, with a background in Statistics, Data Science, Applied Mathematics (as a lecturer), Health Sciences, Bioengineering, and Mechanical Engineering. My passion lies in developing and deploying data-driven solutions for real-world problems, particularly in tech industry, healthcare analytics, cancer research, computer vision, Nartural and Large Language processing. I specialize in machine learning, statistical analysis,  image processing, computer modeling, numerical simulation, and optimization.
+								I am a Data Scientist at MD Anderson Cancer Center, formerly a Senior Statistical Analyst, with a background in Statistics, Data Science, Applied Mathematics (as a lecturer), Health Sciences, Bioengineering, and Mechanical Engineering. My passion lies in developing and deploying data-driven solutions for real-world problems, particularly in tech industry, healthcare analytics, computer vision, Nartural and Large Language modeling. I specialize in machine learning, statistical analysis,  image processing, computer modeling, numerical simulation, and optimization.
 
 <br>
 
