--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 								I am a Data Scientist at MD Anderson Cancer Center, formerly a Senior Statistical Analyst, with a background in Statistics, Data Science, Applied Mathematics (as a lecturer), Health Sciences, Bioengineering, and Mechanical Engineering. My passion lies in developing and deploying data-driven solutions for real-world problems, particularly in tech industry, healthcare analytics, computer vision, Nartural and Large Language modeling. I specialize in machine learning, statistical analysis, image processing, computer modeling, numerical simulation, and optimization.
 
 <br>
+								<a href="#projects">list of my projects
+										</a>
 
 								<br>
 								
