--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 								I am a Data Scientist at MD Anderson Cancer Center, formerly a Senior Statistical Analyst, with a background in Statistics, Data Science, Applied Mathematics (as a lecturer), Health Sciences, Bioengineering, and Mechanical Engineering. My passion lies in developing and deploying data-driven solutions for real-world problems, particularly in tech industry, healthcare analytics, computer vision, Nartural and Large Language modeling. I specialize in machine learning, statistical analysis, image processing, computer modeling, numerical simulation, and optimization.
 
 <br>
-								<a href="#projects">list of my projects
-										</a>
-
+								<br>
+								<h3><a href="#projects">list of my projects
+										</a><h3>
+<br>
 								<br>
 								
 								A key focus of my work involves handling complex medical data challenges, including highly imbalanced datasets in the cancer domain and across various modalities such as imaging, clinical records, and multi-source health data. I work extensively with cancer-related datasets, including national surveys, health claims data, cancer registries, clinical trials, and observational studies, ensuring that predictive models remain robust even in data-scarce or highly skewed scenarios.
