--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <br>
 								<h3><a href="#projects">list of my projects
 										</a></h3>
-								<h3><a href="#projects" class="button large scrolly">Projects</a></h3>
+								<a href="#projects" class="button large scrolly">Projects</a>
 								<br>
 								
 								A key focus of my work involves handling complex medical data challenges, including highly imbalanced datasets in the cancer domain and across various modalities such as imaging, clinical records, and multi-source health data. I work extensively with cancer-related datasets, including national surveys, health claims data, cancer registries, clinical trials, and observational studies, ensuring that predictive models remain robust even in data-scarce or highly skewed scenarios.
